# pilot-upstage-solar-open2

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README-ko.md  README.md  cliff.toml
.github/workflows/: verify-all.yml  (+7 more)
01-solar-open2-harness/: README-ko.md  README.md  REPRODUCE-ko.md  REPRODUCE.md
02-claude-agent-sdk-local/: .env.sample  README-ko.md  README.md  REPRODUCE-ko.md  REPRODUCE.md
02-claude-agent-sdk-local/src/: demo.py  pyproject.toml
02-hermes-agent-solar-open2/: README-ko.md  README.md  REPRODUCE-ko.md  REPRODUCE.md
03-claude-agent-sdk-local/: README-ko.md  README.md  REPRODUCE-ko.md  REPRODUCE.md
03-langchain-upstage-deepagents/: README-ko.md  README.md  REPRODUCE-ko.md  REPRODUCE.md
04-langchain-openwiki-solar-open2/: README-ko.md  README.md  REPRODUCE-ko.md  REPRODUCE.md
04-langchain-upstage-deepagents/: .env.sample  README-ko.md  README.md  REPRODUCE-ko.md  REPRODUCE.md
04-langchain-upstage-deepagents/src/: demo.py  pyproject.toml
04-langchain-upstage-deepagents/src/tests/: test_demo.py
05-hermes-agent-solar-open2/: README-ko.md  README.md  REPRODUCE-ko.md  REPRODUCE.md  config.yaml
05-langchain-openwiki-solar-open2/: .env.sample  README-ko.md  README.md  REPRODUCE-ko.md  REPRODUCE.md
06-grok-build-solar-open2/: README-ko.md  README.md  REPRODUCE-ko.md  REPRODUCE.md
07-hermes-agent-helm-solar-open2/: README-ko.md  README.md  REPRODUCE-ko.md  REPRODUCE.md  values-solar-open2.yaml
docs/: REPRODUCE-ko.md  REPRODUCE.md
scripts/: verify-case.sh  wait-for-upstage-full-reset.sh  wait-for-upstage-headroom.sh
(+23 files in other folders)
