[project]
name = "langchain-upstage-deepagents"
version = "0.1.0"
description = "Initialize a deepagents agent at the code level with langchain-upstage (Solar Open2) as the model backend"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.12",
    "langchain-upstage>=0.7.7",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "ty>=0.0.59",
]

[tool.pytest.ini_options]
pythonpath = ["."]
